# miosix-kernel

./: .directory  .gitignore  .gitmodules  CMakeLists.txt  ELF.h  Makefile  README.md  Readme.txt  Time results.txt  UNSTABLE README.txt  chg.patch  cstimer.cpp  cstimer.h  debugpin.h  elf_program.cpp  elf_program.h  elf_types.h  fail.txt  main.cpp  native_thread_example.cpp  pool_allocator.cpp  pool_allocator.h  process_pool.cpp  process_pool.h  profiling.patch  prog1.h  prog2.h  screenlog.0  sd.patch  svc.s  test_driver.cpp  testsuite.cpp
miosix/: CMakeLists.txt  Makefile  Makefile.kcommon  Makefile.pcommon  miosix.h
miosix/_doc/doxygen/: Doxyfile  documentation.dox
miosix/_doc/textdoc/: Changelog.txt  Directories.txt  gcc threadsafety.txt  stm32-bootloader.txt
miosix/_examples/asm/: Readme.txt
miosix/_examples/atsam4l_lcd/: main.cpp
miosix/_examples/blinking_led/: CMakeLists.txt  simple.cpp
miosix/_examples/datalogger/: ExampleData.h  LogStats.h  Logger.cpp  Logger.h  Makefile  Readme.txt  main.cpp
miosix/_examples/deep_sleep/: main-test.cpp
miosix/_examples/hd44780/: hd44780.cpp
miosix/_examples/ir_decoder/: ir_decoder.cpp
miosix/_examples/led_display/: main.cpp
miosix/_examples/loop_mount/: loop_mount.cpp
miosix/_examples/processes/: CMakeLists.txt  main.cpp  process1.cpp  process2.cpp
miosix/_examples/sad_trombone/: Makefile  Readme.txt  adpcm.h  convert.cpp  player.cpp
miosix/_examples/streamwriter/: streamwriter.cpp
miosix/_examples/termios/: main.cpp
miosix/_examples/thread_pthread/: pthread_example.cpp
miosix/_examples/tinyusb/: Makefile  README.md  main.cpp
miosix/_tools/: check_global_objects.pl  compiler_check.pl  init_project_out_of_git_tree.pl  kernel_global_objects.pl  loc_counter.sh  miosix_size.pl  relpath.pl
miosix/_tools/Visual Studio 2015 Integration/: release.mak
miosix/_tools/bin2uf2/: CMakeLists.txt  Makefile  Readme.txt  bin2uf2.cpp
miosix/_tools/compile_all_boards/: README
miosix/_tools/compiler/: Dockerfile  Readme.txt  cleanup.sh  download.sh  install-script.sh  uninstall.sh
miosix/_tools/context_switch_test/: main.cpp
miosix/_tools/cpu_profiler_test/: main.cpp
miosix/_tools/delay_test/: delay_test.cpp  os_timer_test.cpp
miosix/_tools/delay_test_no_oscilloscope/: delay_test_no_oscilloscope.cpp
miosix/_tools/feedforward_profiling/: CMakeLists.txt  Readme.txt  fdstream.tcc  gdb_init.script  jtag_profiler.cpp  plot.sci  test2.cpp
miosix/_tools/filesystems/: CMakeLists.txt  buildromfs.cpp  image.h  mkimage.pl  mkromfs.h  romfs.h  tree.h
miosix/_tools/fs_backend/: average.pl  backend_benchmark.cpp
miosix/_tools/fs_misc_testcode/: dirlist.cpp  test_driver.cpp
miosix/_tools/kernel_bof_exploit/: exploit.py
miosix/_tools/maputil/: CMakeLists.txt  main.cpp  maputils.cpp
miosix/arch/: CMakeLists.txt  Makefile.inc
miosix/cmake/: AddProcess.cmake  AddProgramTarget.cmake  AddRomfsImage.cmake  CreateProcessesDir.cmake  ExpectedItemInList.cmake  LinkTarget.cmake  MiosixPrintHelpers.cmake  PrintList.cmake  RomFS.cmake  SetDefaultProgramTarget.cmake  boards.cmake  kernel_sources.cmake  miosix_add_board_libraries.cmake  miosix_add_board_library.cmake  miosix_link_target.cmake
miosix/compiler/: Readme.txt  cleanup.sh  download.sh  install-script.sh  readme.txt  uninstall.sh
miosix/config/: CMakeLists.txt  Makefile.inc  Makefile.inc~  miosix_settings.h  options.cmake
miosix/e20/: callback.h  e20.cpp  e20.h  unmember.cpp
miosix/filesystem/: diskio.cpp  file.cpp  file.h  file_access.cpp  file_access.h  filesystem.cpp  filesystem.h  integer.h  ioctl.h  path.cpp  path.h  stringpart.cpp  stringpart.h
miosix/interfaces/: adc_driver.h  arch_registers.h  atomic_ops.h  bsp.h  cache.h  console.h  cpu_const.h  cstimer.h  deep_sleep.h  delays.h  disk.h  endianness.h  gpio.h  interrupts.h  os_timer.h  portability.h  poweroff.h  serial.h  suspend_support.h
miosix/interfaces_private/: bsp.h  cpu.h  mpu.h  os_timer.h  portability.h  sleep.h  smp.h  smp_locks.h  userspace.h
miosix/kercalls/: libc_integration.cpp  libc_integration.h  libstdcpp_integration.cpp  libstdcpp_integration.h
miosix/kernel/: IRQDisplayPrint.cpp  IRQDisplayPrint.h  SystemMap.cpp  SystemMap.h  boot.cpp  buffer_queue.h  cpu_time_counter.cpp  cpu_time_counter.h  cpu_time_counter_private.h  cpu_time_counter_types.h  default_console.cpp  default_console.h  elf_program.cpp  elf_program.h  elf_types.h  error.cpp  error.h  interrupt_output_device.cpp  interrupt_output_device.h  intrusive.cpp  intrusive.h  kernel.cpp  kernel.h  lock.cpp  lock.h  lock_private.h  logging.h  priority_queue.h  process.cpp  process.h  process_pool.cpp  process_pool.h  pthread.cpp  pthread_private.h  queue.h  sched_data_structures.h  smart_sensing.cpp  smart_sensing.h  stackcheck.h  stage_2_boot.cpp  (+13 more)
miosix/ldscripts/: miosix-all-in-xram.ld  miosix-flash-2ram-separate-data-bss.ld  miosix-flash-2ram-separate-heap.ld  miosix-flash-2ram-separate-irqstack.ld  miosix-flash-2ram-separate-pool.ld  miosix-flash-3ram-separate-heap-sgm.ld  miosix-flash-ram-rp2040.ld  miosix-flash-ram.ld
miosix/libsyscalls/: CMakeLists.txt  Makefile  Makefile.pcommon  crt0.s  crt1.cpp  memoryprofiling.cpp
miosix/mram_driver/: mram.cpp
miosix/old_arch/: CMakeLists.txt
miosix/old_config/: Makefile.inc
miosix/stdlib_integration/: libc_integration.cpp  libc_integration.h  libstdcpp_integration.cpp  libstdcpp_integration.h
miosix/temp/: conflict_table.cpp  loc_counter.sh  malloc2.txt  malloc3.txt  simulation.sci
miosix/testsuite/: Readme.txt  build.sh  testsuite.cpp  testsuite_file.h  testsuite_file1.h  testsuite_file2.h  testsuite_simple.h  testsuite_syscall.h  testsuite_syscall_mpu_open.h  testsuite_system.h
miosix/tools/: compiler_check.pl  kernel_global_objects.pl
miosix/util/: crc16.cpp  crc16.h  lcd44780.cpp  lcd44780.h  software_i2c.h  software_spi.h  unicode.cpp  unicode.h  util.cpp  util.h  version.cpp  version.h
templates/simple/: CMakeLists.txt  Makefile  main.cpp
tools/testsuite/: .gitignore  CMakeLists.txt  Makefile  test_syscalls.cpp  test_syscalls.h  testsuite.cpp
(+2815 files in other folders)
